--- a/archive/my-app/package.json
+++ b/archive/my-app/package.json
@@ -3,14 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/pickers": "^3.2.10",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@unicef/material-ui-currency-textfield": "^0.8.6",
+    "availity-reactstrap-validation": "^2.6.1",
+    "bootstrap": "^4.5.0",
     "firebase": "^7.14.1",
+    "jquery": "^3.5.1",
+    "material-ui": "^0.20.2",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
+    "react-currency-input": "^1.3.6",
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
     "react-scripts": "3.4.1",
+    "react-text-mask": "^5.4.3",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
