--- a/archive/my-app/package.json
+++ b/archive/my-app/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
     "react-scripts": "3.4.1",
+    "react-scrollbar": "^0.5.6",
     "react-text-mask": "^5.4.3",
     "reactstrap": "^8.4.1"
   },
