--- a/archive/my-app/package.json
+++ b/archive/my-app/package.json
@@ -11,7 +11,7 @@
     "@unicef/material-ui-currency-textfield": "^0.8.6",
     "availity-reactstrap-validation": "^2.6.1",
     "bootstrap": "^4.5.0",
-    "firebase": "^7.14.1",
+    "firebase": "^7.14.4",
     "jquery": "^3.5.1",
     "material-ui": "^0.20.2",
     "prop-types": "^15.7.2",
@@ -19,6 +19,7 @@
     "react-currency-input": "^1.3.6",
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
+    "react-number-format": "^4.4.1",
     "react-scripts": "3.4.1",
     "react-scrollbar": "^0.5.6",
     "react-text-mask": "^5.4.3",
