--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^16.13.1",
     "react-firebaseui": "^4.1.0",
     "react-number-format": "^4.4.1",
+    "react-onclickoutside": "^6.9.0",
     "react-scripts": "3.4.1",
     "react-scrollbar": "^0.5.6",
     "react-text-mask": "^5.4.3",
